--- a/es-tps-cinema/MainWindow.xaml
+++ b/es-tps-cinema/MainWindow.xaml
@@ -14,6 +14,12 @@
         <Button x:Name="CassaNumero1btn" Content="Cassa Numero 1" HorizontalAlignment="Left" Height="50" Margin="279,340,0,-84" VerticalAlignment="Top" Width="109" Click="Button_Click"/>
         <TextBox HorizontalAlignment="Left" Height="50" Margin="432,340,0,-84" TextWrapping="Wrap" Text="&#xD;&#xA;" VerticalAlignment="Top" Width="92"/>
         <TextBox HorizontalAlignment="Left" Height="50" Margin="684,340,0,-84" TextWrapping="Wrap" VerticalAlignment="Top" Width="92"/>
-        <Button x:Name="CassaNumero2" Content="&#xD;&#xA;Cassa numero 2&#xD;&#xA;" HorizontalAlignment="Left" Height="52" Margin="552,340,0,-86" VerticalAlignment="Top" Width="101" Click="Button_Click_1"/>
+        <Button Content="&#xD;&#xA;Cassa numero 2&#xD;&#xA;" HorizontalAlignment="Left" Height="52" Margin="552,340,0,-86" VerticalAlignment="Top" Width="101" Click="Button_Click_1"/>
+        <Label Content="Posto 1" HorizontalAlignment="Left" Height="38" Margin="72,210,0,0" VerticalAlignment="Top" Width="90" Foreground="White" FontSize="24"/>
+        <Label Content="Posto 2" HorizontalAlignment="Left" Height="38" Margin="186,212,0,0" VerticalAlignment="Top" Width="90" Foreground="White" FontSize="24"/>
+        <Label Content="Posto 3" HorizontalAlignment="Left" Height="38" Margin="306,212,0,0" VerticalAlignment="Top" Width="90" Foreground="White" FontSize="24"/>
+        <Label Content="Posto 4" HorizontalAlignment="Left" Height="38" Margin="422,213,0,0" VerticalAlignment="Top" Width="90" FontSize="24" Foreground="White"/>
+        <Label Content="Posto 5" HorizontalAlignment="Left" Height="38" Margin="530,214,0,0" VerticalAlignment="Top" Width="90" FontSize="24" Foreground="white"/>
+        <Label Content="Posto 6" HorizontalAlignment="Left" Height="38" Margin="650,214,0,0" VerticalAlignment="Top" Width="90" FontSize="24" Foreground="white"/>
     </Grid>
 </Window>
